--- a/pages/about.html
+++ b/pages/about.html
@@ -137,10 +137,12 @@
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
+    <script src="../libraries/ScrollMagic.min.js"></script>
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/footer.js"></script>
+    <script src="../js/about.js"></script>
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkAbout');
