--- a/pages/contact.html
+++ b/pages/contact.html
@@ -173,10 +173,12 @@
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
+    <script src="../libraries/ScrollMagic.min.js"></script>
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/cards.js"></script>
+    <script src="../js/contact.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
