--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
         <div id='myProjects' class="row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/projects/busTracker.gif" class="card-img-top mx-auto pt-4" alt="Animated head image"
+                <img src="../pics/projects/busTracker.gif" class="card-img-top mx-auto pt-4" alt="Bus tracker project gif."
                     style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">Real-Time Bus Tracker</h5>
@@ -83,7 +83,7 @@
                             target="_blank">Try Demo</a>
                         <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
                             href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                             target="_blank">Try Demo</a>
                         <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
                             href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                             target="_blank">Try Demo</a>
                         <a id='pacManFactoryRepo' onclick="buttonEffect('pacManFactoryRepo')"
                             href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                             Game</a>
                         <a id='pacManMiniGameRepo' onclick="buttonEffect('pacManMiniGameRepo')"
                             href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                             class="btn btn-secondary" target="_blank">Visit Site</a>
                         <a id='lmnoPhotoRepo' onclick="buttonEffect('lmnoPhotoRepo')"
                             href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                             Demo</a>
                         <a id='jsCalcRepo' onclick="buttonEffect('jsCalcRepo')"
                             href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                             target="_blank">Try Demo</a>
                         <a id='etchASketchRepo' onclick="buttonEffect('etchASketchRepo')"
                             href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                             target="'_blank">Play Game</a>
                         <a id='rockPaperScissorshRepo' onclick="buttonEffect('rockPaperScissorshRepo')"
                             href="https://github.com/codeTrackLift/rock-paper-scissors"
-                            class="btn btn-secondary btnRepo" target="'_blank">View Repo</a>
+                            class="btn btn-secondary btnRepo" target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -264,7 +264,7 @@
                             target="'_blank">Visit Site</a>
                         <a id='odinLandingpageRepo' onclick="buttonEffect('odinLandingpageRepo')"
                             href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
-                            target="'_blank">View Repo</a>
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
