--- a/pages/blog.html
+++ b/pages/blog.html
@@ -101,31 +101,35 @@
                             </div>
                             <div class="col-sm-6">
                                 <p>
-                                    Our <span class="text-white">Full Stack Coding Bootacmp</span> project this week
+                                    Our <span class="menloRegular text-white">Full Stack Coding Bootacmp</span> project
+                                    this week
                                     involved <a href="https://developer.mozilla.org/en-US/docs/Web/API/fetch"
                                         target="_blank">fetching</a> data from an <span
-                                        class="menloRegular chocolate">Application Programming Interface</span> (<a
+                                        class="menloRegular cornflowerBlue">Application Programming Interface</span> (<a
                                         href="https://developer.mozilla.org/en-US/docs/Web/API" target="_blank">API</a>)
                                     and use it to show and update live bus locations.
                                 </p>
                                 <p>
-                                    This video shows a small portion of the code and how the bus array used to create
-                                    and move individual map markers.
+                                    This video shows <span class="chocolate">snippets of code</span> and how the bus
+                                    array is used to create and move individual map markers.
                                 </p>
                             </div>
                         </div>
                         <div class="row my-3">
                             <div class="col-sm-4 col-md-6">
-                                <p>After figuring out how to move the array of map markers using a loop, I decided to
+                                <p>After figuring out how to <span class="chocolate">move the array</span> of map
+                                    markers <span class="chocolate">using a loop</span>, I decided to
                                     further build upon the project.</p>
-                                <p><span class="text-white">Additional features</span> include: map controls, light/dark
+                                <p><span class="cornflowerBlue menloRegular">Custom features</span> include: map
+                                    controls, light/dark
                                     mode toggle button, refresh timer, and a last updated time.</p>
                                 <p class="d-none d-md-block">The map markers are also assigned a random color, which is
                                     color-coded with a 'bus id' list. The 'bus id' list will show once the application
                                     is running.</p>
                                 <p class="d-none d-md-block">Please see the <a
                                         href="../pages/projects.html">Projects</a> section of my portfolio to check out
-                                    the deployed demo, and let me know what you think.</p>
+                                    the <span class="text-white">deployed demo</span>, and let me know what you think.
+                                </p>
                             </div>
                             <div class="col-sm-8 col-md-6 row">
                                 <img src="../pics/projects/busTracker.gif" class="row img-fluid my-auto py-3"
@@ -135,7 +139,8 @@
                                     is running.</p>
                                 <p class="col-sm-6 d-md-none">Please see the <a
                                         href="../pages/projects.html">Projects</a> section of my portfolio to check out
-                                    the deployed demo, and let me know what you think.</p>
+                                    the <span class="text-white">deployed demo</span>, and let me know what you think.
+                                </p>
                             </div>
                         </div>
                         <div class="'container-fluid row">
