--- a/pages/projects.html
+++ b/pages/projects.html
@@ -234,10 +234,10 @@
                     </p>
                     <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
                     <div class="btnContainer">
-                        <a id='rockPaperScissorshDemo' onclick="buttonEffect('rockPaperScissorshDemo')"
+                        <a id='rockPaperScissorsDemo' onclick="buttonEffect('rockPaperScissorsDemo')"
                             href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
                             target="'_blank">Play Game</a>
-                        <a id='rockPaperScissorshRepo' onclick="buttonEffect('rockPaperScissorshRepo')"
+                        <a id='rockPaperScissorsRepo' onclick="buttonEffect('rockPaperScissorsRepo')"
                             href="https://github.com/codeTrackLift/rock-paper-scissors"
                             class="btn btn-secondary btnRepo" target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
@@ -271,16 +271,41 @@
 
         </div> <!-- Row closing div -->
 
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is important to you, I would encourage you to pursue it relentlessly."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I am a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I spent 20 years pursuing 'success,' I will spend the next 20 pursuing my passion."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
+    <script src="../libraries/ScrollMagic.min.js"></script>
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/cards.js"></script>
+    <script src="../js/projects.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
